# cps2003assignemnt

./: .gitignore  CMakeLists.txt  README.md  c_mock.c
report/: University_of_Malta_Logo.eps  diagram.dot  interaction.eps  report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
src/: Makefile  config.h  main.c
src/client/: client_ui.c  client_ui.h  main.c  network_client.c  network_client.h
src/server/: arena.c  arena.h  arena.h.gch  listnode.c  listnode.h  main.c  network.c  network.h  network_server.c  network_server.h  snake.c  snake.h
